crates/lutum/tests/ui/hook_def_singleton_output.stderr
error: #[hook(singleton)] does not support 'chain', 'aggregate', 'finalize', or 'output'
 --> tests/ui/hook_def_singleton_output.rs:3:12
  |
3 |     #[hook(singleton, output = usize)]
  |            ^^^^^^^^^
